--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -14,8 +14,7 @@ The format is based on {uri-changelog}[Keep a Changelog].
 * Renamed and standardized all control variables
 * Removed deprecated template provider dependencies
 * Made bastion and operator modules conditional
-* Added LPGs for hub and spoke deployment model
-* Removed identity parameters in between modules
+* Removed identity parameters in between modules to improve reusability
 * Renamed okenetwork submodule to network
 * Created a new submodule (extensions) and moved all scripts and extra things there
 * Moved dynamic group and policy for kms into oke module
@@ -24,21 +23,22 @@ The format is based on {uri-changelog}[Keep a Changelog].
 
 # Changes
 * Changed default Kubernetes version to v1.20.8 and removed v1.16.8, v1.17.9 from docs.
-* Added support for reserved public IP address for NAT gateway
 * Bug fix: Use correct calico file to install calico for networking policy only (#307)
 * Added support for GPU and ARM shapes (#302)
 * VCN module upgraded to VCN 3.0.0. This allows supporting multiple cidr blocks (#360)
 * kubeconfig on operator always uses PRIVATE_ENDPOINT (#358)
 * Documented providers in quickstart (#355)
-* Renamed tags to freeform_tags in line with other modules
-* Added validation on some variables
+* Renamed tags to freeform_tags in line with other modules (#364)
+* Added validation on some variables (#370)
 
 # New Features
-
+* Added OCI Bastion Service as option to access operator or control plane
+* Added support for reserved public IP address for NAT gateway (#311)
+* Added LPGs for hub and spoke deployment model (#295)
 * Allow access to operator via OCI Bastion service (#352)
 * Added support for using NSGs for cluster endpoint (#343 )
 * Added option to disable worker node access to Internet. Users can only pull images from OCIR (#331)
-* Added ability to specify api and private ssh keys using heredoc format with a variable (#375)
+* Added ability to specify api and private ssh keys using heredoc format with a variable (#375) 
 
 # Bug fixes
 * Added home region to update dynamic group script for cases when actual region is different from tenancy home region (#347)
